--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script
-      src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="../css/styles.css" rel="stylesheet" />
     <title>Tomoto.com - Cotizador online</title>
   </head>
@@ -90,7 +89,7 @@
               <option value="24">24</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group" id="seleccionMonedaCotizador">
             <div class="form-check" >
               <input
                 class="form-check-input"
@@ -98,6 +97,7 @@
                 id="ARSCheck"
                 name="currencyCheck"
                 value="USD"
+                checked
                 required
               />
               <label class="form-check-label" for="USD"> U$D </label>
@@ -128,6 +128,6 @@
       
       
     </main>
-    <script src="../js/index.js"></script>
+    <script src="../js/quoter.js"></script>
   </body>
 </html>
