--- a/pages/cotizador.html
+++ b/pages/cotizador.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TOMOTO</a>
+          <a class="navbar-brand" href="../index.html">TOMOTO.com</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -43,10 +43,10 @@
                 <a class="nav-link" href="./cotizador.html">Cotizador</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Catalogo</a>
+                <a class="nav-link" href="./error.html">Catalogo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Novedades</a>
+                <a class="nav-link" href="./error.html">Novedades</a>
               </li>
             </ul>
           </div>
